<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="301dp"
    android:layout_height="154dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rectangle15">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:text="@string/delete_conf"
        android:textSize="16sp"
        android:textColor="#000000"
        android:letterSpacing="-0.01"
        android:fontFamily="@font/montserrat_extrabold"/>
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="9.5dp"
        android:text="@string/are_you_sur"
        android:textSize="13sp"
        android:textColor="#000000"
        android:letterSpacing="-0.01"
        android:fontFamily="@font/montserrat_regular"/>
    
    <TextView
        android:id="@+id/cancel"
        android:layout_width="58dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toStartOf="@id/delete"
        android:layout_marginEnd="14.5dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="69.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="19.5dp"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textColor="#3659CF"
        android:letterSpacing="-0.01"
        android:fontFamily="@font/montserrat_extrabold"/>
    
    <TextView
        android:id="@+id/delete"
        android:layout_width="56dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancel"
        android:layout_marginEnd="24.5dp"
        app:layout_constraintBottom_toBottomOf="@id/cancel"
        android:text="@string/delete"
        android:textSize="16sp"
        android:textColor="#3659CF"
        android:letterSpacing="-0.01"
        android:fontFamily="@font/montserrat_extrabold"/>

</androidx.constraintlayout.widget.ConstraintLayout>