<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="310dp"
    android:layout_height="399dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/radius_12">
    
    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/smile"/>
    
    <TextView
        android:id="@+id/done"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/radius_22"
        android:text="@string/done"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:fontFamily="@font/montserrat_extrabold"/>
    
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="103dp"
        android:text="@string/sorry_for_inconvenience"
        android:textSize="20sp"
        android:textColor="#000000"
        android:fontFamily="@font/montserrat_extrabold"
        android:gravity="center"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="167dp"
        android:text="@string/data_sync_adjust_toast"
        android:textSize="14sp"
        android:textColor="#000000"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"/>


    


</androidx.constraintlayout.widget.ConstraintLayout>