<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.setting.FeedbackActivity"
    android:background="#EAEAEE">

    <ImageView
        android:id="@+id/back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="18.5dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/arrow_left"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="49dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16.5dp"
        android:text="@string/feedback"
        android:textSize="20sp"
        android:textColor="#000000"
        android:letterSpacing="-0.01"
        android:fontFamily="@font/montserrat_extrabold"
        android:gravity="center"/>
    
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/main"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/saveButton"
        android:layout_marginBottom="-10dp"
        android:layout_marginTop="64.5dp"
        android:background="@drawable/radius_12"
        android:gravity="top|start"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:hint="@string/feedback_or_suggestion"
        android:textSize="16sp"
        android:textColor="#000000"
        android:fontFamily="@font/montserrat_regular"
        android:letterSpacing="-0.01"
        android:textCursorDrawable="@drawable/radius_1"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:text="@string/save"
        android:textSize="20sp"
        android:letterSpacing="-0.01"
        android:textColor="#FFFFFF"
        android:background="@drawable/radius_27"
        android:gravity="center"
        android:fontFamily="@font/montserrat_extrabold"
        android:id="@+id/saveButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>