<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="380dp"
    android:background="@drawable/radius_24_top"
    android:id="@+id/datePickerDialog"
    android:clipToOutline="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:letterSpacing="-0.01"
        android:textColor="#000000"
        android:gravity="center"
        android:text="@string/date"
        android:fontFamily="@font/montserrat_extrabold"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="100dp"
        android:layout_height="238dp"
        android:id="@+id/time"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="76.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:clipToPadding="false"
        />

    <View
        android:id="@+id/monthTopLine"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="#803659CF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/time"
        app:layout_constraintEnd_toEndOf="@id/time"
        android:layout_marginTop="180dp" />

    <View
        android:id="@+id/monthBottomLine"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:background="#803659CF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/time"
        app:layout_constraintEnd_toEndOf="@id/time"
        android:layout_marginTop="212dp" />



    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/radius_25"
        android:id="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toStartOf="@id/done"
        android:textSize="18sp"
        android:letterSpacing="-0.01"
        android:textColor="#000000"
        android:gravity="center"
        android:text="@string/cancel"
        android:fontFamily="@font/montserrat_extrabold"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/radius_25"
        android:id="@+id/done"
        app:layout_constraintStart_toEndOf="@id/cancel"
        android:layout_marginStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:letterSpacing="-0.01"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:text="@string/done"
        android:fontFamily="@font/montserrat_extrabold"
        android:backgroundTint="#3659CF"/>


</androidx.constraintlayout.widget.ConstraintLayout>
